[package]
name = "bevy-physics-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.1", features = ["dynamic"] }
bevy_rapier3d = { version = "0.12.1", features = ["simd-stable"] }
bevy_flycam = "0.6.0"
nalgebra = "0.30.1"
bevy_atmosphere = "0.2.4"

# https://bevy-cheatbook.github.io/pitfalls/performance.html
# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3